# open-vocab-shared-autonomy

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile.isaac-ros  Dockerfile.isaac-sim  Dockerfile.spot-ros2  Dockerfile.zed  README.md  dependencies.repos  docker-compose.yaml  setup_dependencies.sh
isaac-ros_ws/src/spot_nvblox/: CMakeLists.txt  package.xml
isaac-ros_ws/src/spot_nvblox/launch/: spot_nvblox.launch.py
isaac-ros_ws/src/spot_nvblox/scripts/: depth_min_clip_node.py  republish_rgb.py
isaac-sim_ws/spot_warehouse/: NOTICE  README.md
isaac-sim_ws/spot_warehouse/applications/: plot_arm_trajectory.py  run_spot_warehouse.sh  spot_arm_subscriber.py  spot_cameras.py  spot_loco_phase2.yaml  spot_policy.py  spot_ros_bridge.py  spot_warehouse.py  spot_warehouse_debug.py
isaac-sim_ws/spot_warehouse/assets/: anim.usd
isaac-sim_ws/spot_warehouse/assets/ball_valve/: ball_valve.urdf  valve.usd
isaac-sim_ws/spot_warehouse/assets/clutter/: warehouse.usd
isaac-sim_ws/spot_warehouse/assets/drill/: drill.usd
isaac-sim_ws/spot_warehouse/policies/: spot_warehouse_policy.pt
isaac-sim_ws/spot_warehouse/robot/spot/: reachability_results.csv  spot_with_arm.urdf
spot-ros2_ws/src/arm_pose_estimator/: package.xml  setup.cfg  setup.py
spot-ros2_ws/src/arm_pose_estimator/arm_pose_estimator/: hand_orientation_estimator.py  hand_pose_estimator.py  wrist_detector.py
spot-ros2_ws/src/arm_pose_estimator/launch/: wrist_detector_zed.launch.py
spot-ros2_ws/src/spot_operation_ros2/: package.xml  setup.cfg  setup.py
(+21 files in other folders)
